--- a/WEB1/2.html
+++ b/WEB1/2.html
@@ -2,14 +2,41 @@
 <head>
 <title>WEB1 - CSS</title>
 <meta charset="utf-8"/>
+<style>
+    a{
+        color:black;
+        text-decoration:none;
+    }
+    a:hover{
+        background-color: aliceblue;
+        color:gray;
+    }
+    a:active{
+        background-color: green;
+        color:white;
+    }
+    h1{
+        font-size:xx-large;
+        text-align: center;
+    }
+</style>
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
     <ol>
-    <li><a href="1.html">HTML</a></li>
+    <li><a href="1.html">HTML </a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
+   </ol>
+
+<!--
+<h1><font color="red"><a href="index.html">WEB</font></a></h1>
+<ol>
+<li><font color="red"><a href="1.html">HTML</font></a></li>
+<li><font color="red"><a href="2.html">CSS</font></a></li>
+<li><font color="red"><a href="3.html">JavaScript</font></a></li>
 </ol>
+--> 
 
 <h2>CSS</h2>
 <p>
